# # # # # #  project setup  # # # # # #
CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( OSGQSGExamples )

SET( CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}" )

SET( EXECUTABLE_OUTPUT_PATH
    ${PROJECT_BINARY_DIR}/bin CACHE PATH
    "Single directory for all executables." )
MAKE_DIRECTORY( ${EXECUTABLE_OUTPUT_PATH} )
MARK_AS_ADVANCED( EXECUTABLE_OUTPUT_PATH )

INCLUDE( CMakeMacros )

FIND_PACKAGE( osg REQUIRED )

# add OSG for entire project for include & lib paths
INCLUDE_DIRECTORIES( ${OSG_INCLUDE_DIRS} )
LINK_DIRECTORIES( ${OSG_LIBRARIES_DIR} )

ADD_SUBDIRECTORY( Examples )
